--- a/src/Timer/Timer.css
+++ b/src/Timer/Timer.css
@@ -7,7 +7,7 @@
     color: white;
     border: none;
     border-radius: 8px;
-    color: white;
+    color: grey;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -15,10 +15,29 @@
     font-size: 16px;
     margin: 0 10px;
     cursor: pointer;
+    font-family: "Orbitron", sans-serif;
+    font-weight: bolder;
   }
   
   
   .botao:hover{
-    
+    background-color: #222; 
+    transform: scale(1.05);
+    transition: 0.5s;
+    color: rgba(161, 161, 161, 0.76);
+  }
+
+  .botao:active{
+    background-color: #000;
+    transform: scale(0.98);
+    color: white;
+    transition: none;
+  }
+
+
+  .Botoes{
+    border: 1px solid black;
+    border-radius: 50%;
+    padding: 5rem;
   }
   
